[package]
name = "twinkled"
version = "0.1.2"
authors = ["Akihito KIRISAKI <kirisaki@klaraworks.net>"]
license = "BSD-3-Clause"
edition = "2018"

description = "UDP-based, light key-value store"
repository = "https://github.com/kirisaki/twinkle"
keyeords = ["db", "database"]
categories = ["database", "database-implementations"]
readme = "README.md"

[dependencies]
futures = "^0.3"
tokio = { version = "^0.2", features = ["full"] }
failure = "^0.1.6"
log = { version = "^0.4.8", features = ["std"] }
time = "^0.1"

[profile.release]
opt-level = 0
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false